Fix icon spacing

--- a/themes/hugo-profile-customized/static/css/v3/v3.css
+++ b/themes/hugo-profile-customized/static/css/v3/v3.css
@@ -37,7 +37,6 @@ a:hover {
   font-size: 18px;
 }
 .social-icon {
-  padding: 2%;
   background-color: #007bff;
   color: #f9fafc !important;
   border-radius: 50%;
@@ -46,6 +45,11 @@ a:hover {
   width: 50px;
   height: 50px;
   text-align: center;
+}
+.social-icon i {
+  margin-top: 50%;
+  margin-bottom: 50%;
+  line-height: 0;
 }
 .social-icon:hover {
   background-color: #f9fafc !important;
